# interviewThing

./: CMakeLists.txt  readme.md
include/: BaseCamera.h  BaseDrone.h  CameraIntrinsics.h  MissionManager.h  PinholeCamera.h  RayIntersectionSolver.h  SydioX2Drone.h
src/: MissionManager.cpp  PinholeCamera.cpp  RayIntersectionSolver.cpp  SydioX2Drone.cpp  main.cpp
